--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Welcome to My Portfolio</h1>
             </div>
             <div class="photo">
-                <img src="P.jpg" alt="Moh.Bagus Panji Arifia">
+                <img src="P.jpg" alt="Your Name">
             </div>
         </div>
     </section>
